<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BugMaster</string>
    <string name="action_sort">Sort</string>
    <string name="question_text">What is the scientific name for:\n%1$s?</string>
    <string name="answer_correct">Congratulations! That is correct!</string>
    <string name="answer_wrong">Sorry, that is not correct. Try again!</string>
    <string name="action_settings">Settings</string>
    <string name="classification">Classification: </string>
    <string name="title_reminder">Quiz Reminder</string>
    <string name="summary_reminder">Set a daily reminder to take the quiz.</string>
    <string name="title_alarm">Reminder Time</string>
    <string name="summary_alarm">Time of day when quiz reminder should trigger</string>
    <string name="notification_title">Quiz Reminder</string>
    <string name="notification_text">Would you like to play the quiz today?</string>
    <string name="danger_level">12</string>
    <string name="danger_txt">Danger Level</string>
    <string name="custom_bug_name">American Cockroach</string>
    <string name="custom_sci_name">Periplaneta Americana</string>
    <string name="question_txt">On a scale of 1-10, how dangerous is this insect?</string>

    <string name="pref_key_reminder" translatable="false">key_reminder</string>
    <string name="pref_key_alarm" translatable="false">key_alarm</string>
</resources>
