<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:background="@color/frameColor">

        <TextView
            android:id="@+id/detail_bug_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_bug_name"
            android:textColor="@color/dangerTextColor"
            android:textSize="@dimen/large_text_appearance"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_but"
            android:layout_marginLeft="@dimen/danger_level_pad"/>

        <TextView
            android:id="@+id/detail_sci_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_sci_name"
            android:textColor="@color/dangerTextColor"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/medium_text_appearance"
            android:layout_margin="@dimen/danger_level_pad"/>
        
        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/image_margin"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_appearance"
            android:layout_margin="@dimen/danger_level_pad"/>

        <TextView
            android:id="@+id/detail_class"
            android:text="@string/classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_appearance"
            android:layout_margin="@dimen/danger_level_pad"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/danger_txt"
        android:textSize="@dimen/medium_text_appearance"
        android:layout_margin="@dimen/danger_level_pad"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_txt"
        android:layout_marginLeft="@dimen/danger_level_pad"/>

    <RatingBar
        android:id="@+id/dteail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/bug_danger"
        android:layout_margin="@dimen/danger_level_pad"/>

</LinearLayout>