<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/viewholder_bg">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/background_danger"
        >

        <TextView
            android:id="@+id/danger_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/danger_level"
            android:textColor="@color/dangerTextColor"
            android:textSize="@dimen/large_text_appearance" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bug_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/custom_bug_name"
            android:textColor="@color/nameColor"
            android:textSize="@dimen/large_text_appearance" />

        <TextView
            android:id="@+id/bug_sci_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_sci_name"
            android:textSize="@dimen/medium_text_appearance" />

    </LinearLayout>

</LinearLayout>